src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Profession__c</fullName>
        <description>Profession of Lead - Dependent upon Product Area</description>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dental Assistant</fullName>
                </value>
                <value>
                    <fullName>Dental Hygienist</fullName>
                </value>
                <value>
                    <fullName>Dental Student</fullName>
                </value>
                <value>
                    <fullName>Dental Technician</fullName>
                </value>
                <value>
                    <fullName>Denturist</fullName>
                </value>
                <value>
                    <fullName>Endodontist</fullName>
                </value>
                <value>
                    <fullName>Faculty/Instructor/Professor</fullName>
                </value>
                <value>
                    <fullName>General Dentist</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Implant Manager</fullName>
                </value>
                <value>
                    <fullName>Implantologist</fullName>
                </value>
                <value>
                    <fullName>Lab Owner</fullName>
                </value>
                <value>
                    <fullName>Maxillofacial Surgeon</fullName>
                </value>
                <value>
                    <fullName>Oral surgeon</fullName>
                </value>
                <value>
                    <fullName>Orthodonist</fullName>
                </value>
                <value>
                    <fullName>Other staff Dental</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Periodontist</fullName>
                </value>
                <value>
                    <fullName>Post Graduate trainee</fullName>
                </value>
                <value>
                    <fullName>Prosthodontist</fullName>
                </value>
                <value>
                    <fullName>Purchaser</fullName>
                </value>
                <value>
                    <fullName>Registrar</fullName>
                </value>
                <value>
                    <fullName>Restorative Dentist</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_2_marginal_bone_maintenance__c</fullName>
        <label>Question 2: marginal bone maintenance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A. 0.24 mm, 0.75 mm, 0.48 mm</fullName>
                </value>
                <value>
                    <fullName>B. 0.34 mm, 0.85 mm, 0.58 mm</fullName>
                </value>
                <value>
                    <fullName>C. 0.44 mm, 0.95 mm, 0.68 mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_3_combination_key_features__c</fullName>
        <label>Question 3: combination key features?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A. Astra Tech BioManagement Complex</fullName>
                </value>
                <value>
                    <fullName>B. Astra Tech Implant System</fullName>
                </value>
                <value>
                    <fullName>C. Integrated Esthetics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_4_new_study_OsseoSpeed__c</fullName>
        <label>Question 4: new study OsseoSpeed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A. Two-year follow-up</fullName>
                </value>
                <value>
                    <fullName>B. Three-year follow-up</fullName>
                </value>
                <value>
                    <fullName>C. Five-year follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_5_Atlantis_designed_for__c</fullName>
        <label>Question 5: Atlantis designed for?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A. All major implant systems</fullName>
                </value>
                <value>
                    <fullName>B. ATIS only</fullName>
                </value>
                <value>
                    <fullName>C. Implants from Straumann only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_6_Atlantis_available_in__c</fullName>
        <label>Question 6: Atlantis available in?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A. Titanium only</fullName>
                </value>
                <value>
                    <fullName>B. Zirconia only</fullName>
                </value>
                <value>
                    <fullName>C. Titanium, gold-shaded titanium, zirconia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_7_Atlantis_abutments_designed__c</fullName>
        <label>Question 7: Atlantis abutments designed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A. From the final tooth shape</fullName>
                </value>
                <value>
                    <fullName>B. From a scanned wax abutment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Dependent on Product Area</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_Lead__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Indiana Region</fullName>
                </value>
                <value>
                    <fullName>MidAtlantic</fullName>
                </value>
                <value>
                    <fullName>MidWest</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>NorthWest</fullName>
                </value>
                <value>
                    <fullName>Rocky Mountains</fullName>
                </value>
                <value>
                    <fullName>SouthEast</fullName>
                </value>
                <value>
                    <fullName>Southern California</fullName>
                </value>
                <value>
                    <fullName>Southern Region</fullName>
                </value>
                <value>
                    <fullName>Texas</fullName>
                </value>
                <value>
                    <fullName>Celtic</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoleProfession__c</fullName>
        <label>Role/Profession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RoleProfession</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Specialty</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>Picklist dependent on Country</description>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_Lead__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>Suffix to the Lead Name</description>
        <label>Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <label>Target Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental laboratory owner</fullName>
                </value>
                <value>
                    <fullName>Dental Technician</fullName>
                </value>
                <value>
                    <fullName>Dentist not involved in implants</fullName>
                </value>
                <value>
                    <fullName>Dentist primarily doing both surgery and pros (implantologist)</fullName>
                </value>
                <value>
                    <fullName>Dentist primarily doing only the restorative portion</fullName>
                </value>
                <value>
                    <fullName>Surgeon doing primarily only the surgical portion</fullName>
                </value>
                <value>
                    <fullName>Dental Other (i.e. Auxiliary staff Nurse, Hygienist etc.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Dependant on Region</description>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANGLIA</fullName>
                </value>
                <value>
                    <fullName>EAST MIDLANDS</fullName>
                </value>
                <value>
                    <fullName>KEY ACS</fullName>
                </value>
                <value>
                    <fullName>MIDLANDS</fullName>
                </value>
                <value>
                    <fullName>N IRELAND</fullName>
                </value>
                <value>
                    <fullName>NE THAMES</fullName>
                </value>
                <value>
                    <fullName>NORTH EAST</fullName>
                </value>
                <value>
                    <fullName>NORTH THAMES</fullName>
                </value>
                <value>
                    <fullName>NORTH WEST</fullName>
                </value>
                <value>
                    <fullName>NORTH YORKSHIRE</fullName>
                </value>
                <value>
                    <fullName>NORTHERN IRELAND</fullName>
                </value>
                <value>
                    <fullName>NW THAMES</fullName>
                </value>
                <value>
                    <fullName>SCOTLAND</fullName>
                </value>
                <value>
                    <fullName>SE THAMES</fullName>
                </value>
                <value>
                    <fullName>SOUTH THAMES</fullName>
                </value>
                <value>
                    <fullName>SOUTH WEST</fullName>
                </value>
                <value>
                    <fullName>SW THAMES</fullName>
                </value>
                <value>
                    <fullName>WALES</fullName>
                </value>
                <value>
                    <fullName>WESSEX</fullName>
                </value>
                <value>
                    <fullName>WEST</fullName>
                </value>
                <value>
                    <fullName>WEST MIDLANDS</fullName>
                </value>
                <value>
                    <fullName>WEST SCOTLAND</fullName>
                </value>
                <value>
                    <fullName>Daytona Beach</fullName>
                </value>
                <value>
                    <fullName>Ft. Lauderdale</fullName>
                </value>
                <value>
                    <fullName>Miami N.</fullName>
                </value>
                <value>
                    <fullName>Miami S.</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Palm Beach/Boca Raton</fullName>
                </value>
                <value>
                    <fullName>Petersburg/Ft. Myers</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic_SP__c</fullName>
        <label>Topic (SP)</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC2012_ID__c</fullName>
        <label>WC2012 ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhenCollected__c</fullName>
        <defaultValue>If($User.FirstName = &apos;Eloqua&apos; &amp;&amp; $User.LastName = &apos;Integration&apos;,now(),null)</defaultValue>
        <label>When collected?</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WhereCollected__c</fullName>
        <defaultValue>If($User.FirstName = &apos;Eloqua&apos; &amp;&amp; $User.LastName = &apos;Integration&apos;,&apos;Eloqua Web Form&apos;,null)</defaultValue>
        <label>Where collected?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>temporary_convert__c</fullName>
        <label>temporary convert</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Country_field__c</fullName>
        <label>Country field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__DST_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>DST Setting</label>
        <referenceTo>tz__DST_Setting__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24_Short__c</fullName>
        <description>Shows the current local time (without date) for the Lead in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time (without date) for the Lead in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_24__c</fullName>
        <description>Shows the current local time for the Lead in 24-hr format.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 4 ) &amp; &quot; &quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 )
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time for the Lead in 24-hr format.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time_Short__c</fullName>
        <description>Shows the current local time (without date) for the Lead.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time (without date) for the Lead.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Local_Time__c</fullName>
        <description>Shows the current local time for the Lead.</description>
        <formula>IF(ISBLANK(tz__UTC_Offset_F__c),
&quot;Unknown&quot;,
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 6, 2 ) &amp; &quot;/&quot; &amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 9, 2 ) &amp; &quot;/&quot; &amp;
LEFT( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 4 ) &amp; &quot; &quot; &amp;
TEXT(
IF(
OR(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) = 12
),
12,
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) )
-
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
0,
12
)
)
)
&amp;&quot;:&quot;&amp;
MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 15, 2 )
&amp;&quot; &quot;&amp;
IF(
VALUE( MID( TEXT( NOW()+ tz__UTC_Offset_F__c /24 ), 12, 2 ) ) &lt; 12,
&quot;AM&quot;,
&quot;PM&quot;
)
&amp; &quot; &quot; &amp;
IF( $Setup.tz__lt_app_settings__c.tz__Abbreviation__c, tz__Timezone_F__c,&quot;&quot;)
)</formula>
        <inlineHelpText>Shows the current local time for the Lead.</inlineHelpText>
        <label>Local Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_DST_Full__c</fullName>
        <description>Full timezone name when the DST is on. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Full timezone name when the DST is on. This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>Timezone DST (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_DST__c</fullName>
        <description>Timezone abbreviation when DST is on (PDT, EDT, etc.). This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Timezone abbreviation when DST is on (PDT, EDT,etc.). This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>Timezone DST</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_F__c</fullName>
        <description>Current timezone abbreviation (PST, EST,etc..)</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__Timezone_DST__c, tz__Timezone__c )</formula>
        <inlineHelpText>Current timezone abbreviation (PST, EST,etc..)</inlineHelpText>
        <label>Timezone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full_F__c</fullName>
        <description>Current timezone full name.</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__Timezone_DST_Full__c, tz__Timezone_Full__c )</formula>
        <inlineHelpText>Current timezone full name.</inlineHelpText>
        <label>Timezone (Full)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_Full__c</fullName>
        <description>Full timezone name when the DST is off. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Full timezone name when the DST is off. This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>Timezone Standard (Full)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_IANA__c</fullName>
        <description>Timezone as defined by Internet Assigned Numbers Authority (IANA).</description>
        <inlineHelpText>Timezone as defined by Internet Assigned Numbers Authority (IANA).</inlineHelpText>
        <label>Timezone (IANA)</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone_SFDC__c</fullName>
        <description>Salesforce IANA timezone.</description>
        <inlineHelpText>Salesforce IANA timezone.</inlineHelpText>
        <label>Timezone SFDC</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Timezone__c</fullName>
        <description>Timezone abbreviation when DST is off (PST, EST, etc.). This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>Timezone abbreviation when DST is off (PST, EST, etc.). This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>Timezone Standard</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset_DST__c</fullName>
        <description>UTC Offset when the DST is on. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>UTC Offset when the DST is on. This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>UTC Offset DST</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__UTC_Offset_F__c</fullName>
        <description>Current UTC timezone offset.</description>
        <formula>IF( tz__DST_Setting__r.tz__DST__c , tz__UTC_Offset_DST__c , tz__UTF_Offset__c )</formula>
        <inlineHelpText>Current UTC timezone offset.</inlineHelpText>
        <label>UTC Offset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tz__UTF_Offset__c</fullName>
        <description>UTC Offset when the DST is off. This is a hidden field and should not be added to the page layouts.</description>
        <inlineHelpText>UTC Offset when the DST is off. This is a hidden field and should not be added to the page layouts.</inlineHelpText>
        <label>UTC Offset Standard</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>QueueUnassignedLeadsQueue</fullName>
        <columns>Lead_Source_Serial__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Country_Lead__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Profession__c</columns>
        <columns>LEAD.STREET</columns>
        <columns>LEAD.ZIP</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Product_Area__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Queue: Unassigned Leads Queue</label>
        <language>en_US</language>
        <queue>UnassignedLeadsQueue</queue>
        <sharedTo>
            <group>DI_System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x10MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Profession__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
        <language>en_US</language>
        <sharedTo>
            <group>ViewsinEnglish</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Astra_Tech_Std_Leads</fullName>
        <active>true</active>
        <businessProcess>DIH Std Lead Process</businessProcess>
        <label>Standard Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Digital_Marketing_Lead</fullName>
        <active>true</active>
        <businessProcess>DIH Std Lead Process</businessProcess>
        <label>Digital Marketing Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>SimPlant_Leads</fullName>
        <active>true</active>
        <businessProcess>SimPlant Lead Process</businessProcess>
        <label>SimPlant Leads</label>
    </recordTypes>
    <recordTypes>
        <fullName>World_Congress_2012_Participant</fullName>
        <active>true</active>
        <businessProcess>WC2012 Process</businessProcess>
        <label>World Congress 2012 Participant</label>
    </recordTypes>
</CustomObject>